--- a/pseudo_elementy/index.html
+++ b/pseudo_elementy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pseudo selektory</title>
+    <title>Pseudoelementy</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
